--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "scripts": {
     "start": "NODE_ENV=\"production\" node dist/src/main.js",
     "build": "tsc",
+    "test": "jest",
+    "test:cov": "jest --coverage",
+    "fmt": "prettier --write src",
     "lint": "eslint -c .eslintrc.js src/**/*.ts",
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/main.ts"
   },
@@ -10,13 +13,23 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
     "@types/morgan": "^1.9.3",
+    "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "babel-jest": "^27.2.0",
     "eslint": "^7.32.0",
+    "jest": "^27.2.0",
     "nodemon": "^2.0.12",
+    "prettier": "^2.4.1",
+    "supertest": "^6.1.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
