--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
     "@types/morgan": "^1.9.3",
+    "@types/node": "^16.9.4",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
