--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "bufferutil": "^4.0.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "mongodb": "^4.1.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "socket.io": "^4.2.0",
+    "utf-8-validate": "^5.0.6"
   }
 }
