--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@types/jest": "^27.0.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.9.4",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
+    "@types/express-session": "^1.17.4",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "babel-jest": "^27.2.0",
@@ -40,9 +43,12 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "http-status-codes": "^2.1.4",
     "mongodb": "^4.1.2",
     "morgan": "^1.10.0",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.2.0",
     "utf-8-validate": "^5.0.6"
   }
