--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^27.0.1",
     "@types/morgan": "^1.9.3",
     "@types/node": "^16.9.4",
@@ -26,7 +27,6 @@
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
-    "@types/express-session": "^1.17.4",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "babel-jest": "^27.2.0",
@@ -43,7 +43,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
+    "graphql": "^15.6.1",
     "http-status-codes": "^2.1.4",
     "mongodb": "^4.1.2",
     "morgan": "^1.10.0",
